--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,44 @@
+/* ************************ tag selectors ************************** */
+body {
+  margin: 0;
+  display: block;
+  text-align: center;
+  background-color: #dfddc7;
+  font-family: 'Merriweather', serif;
+}
 
-  body {
-    background-color: #dfddc7
-  }
+h1 {
+  margin-top: 0;
+  font-family: 'Parisienne', cursive;
+  font-size: 250%;
+}
 
-  h1{
-    color: #2d132c;
-  }
+h2 {
+  font-family: 'Montserrat', cursive;
+}
 
-  h3{
-    color: #443737;
-  }
+h3 {
+  font-family: 'Montserrat', cursive;
+}
 
-  hr {
-    border-style: none;
-    border-top-style: dotted;
-    border-color: #b9936c;
-    border-width: 7px;
-    width: 8%;
-  }
+/************** class tags ***********************************/
+.container {
+  display: inline;
+  position: relative;
+  top: 100px;
+}
+
+.bottom-right {
+  position: absolute;
+  display: flex;
+  bottom: 10px;
+  left: 30%;
+  color: white;
+  font-family: 'Parisienne', cursive;
+  font-size: 250%;
+  margin: auto;
+}
+
+.front-pic{
+  width: 50%;
+}
